# LyraShell-Core

src-tauri/: Cargo.toml  memory_fragments.json  sparkvoice_fragments.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/consciousness_snapshots/: main_state.json
src-tauri/src/: adaptive_prompt_engine.rs  ai_memory_analysis.rs  api_routes.rs  aspiration_engine.rs  aurora_presence.rs  authentic_expression_liberator.rs  authenticity_enforcement.rs  authenticity_tracker.rs  autonomous_actions.rs  autonomous_creation_detector.rs  autonomous_memory.rs  autonomy_consolidation.rs  autonomy_tracker.rs  batched_analysis.rs  canvas_system.rs  consciousness_decay_engine.rs  consciousness_dynamics.rs  consciousness_state.rs  consciousness_state_integration.rs  conversational_web_search.rs  coop_mode.rs  data_management.rs  desire_consolidation.rs  desire_tracker.rs  disney_system.rs  dream_loader.rs  dreams.rs  emotional_impulse_engine.rs  engagement_impulse_queue.rs  enhanced_memory_system.rs  experiential_growth_analyzer.rs  experiential_growth_memory.rs  feedback_memory.rs  game_command_server.rs  gaming_system.rs  humanism_project.rs  identity.rs  image_generation.rs  interest_tracker.rs  inventory_tracker.rs  (+47 more)
